fix alignment issue with overview display

--- a/frontend/src/components/card/card.css
+++ b/frontend/src/components/card/card.css
@@ -46,7 +46,7 @@
 
 #card-container {
   width: 100%;
-  height: 37%;
+  height: 100%;
   padding: 0.5em 1em;
 }
 
