--- a/frontend/src/components/overview/overview.css
+++ b/frontend/src/components/overview/overview.css
@@ -40,6 +40,7 @@
 #overview-task-list-container {
   display: flex;
   flex-direction: column;
+  justify-content: left;
   width: 95%;
   max-height: 30em;
   margin: 0 auto;
@@ -104,7 +105,7 @@
   }
   #overiew-display {
     flex-direction: row;
-    justify-content: center;
+    flex-wrap: wrap;
     gap: 1em;
     width: 95%;
     height: 100%;
@@ -116,6 +117,10 @@
     width: 100%;
   }
 
+  .overiew-display-col {
+    width: 48%;
+  }
+
   #filter-btn h2 {
     display: inline-block;
   }
@@ -123,7 +128,6 @@
 @media screen and (min-width: 950px) {
   #overview-container {
     flex-direction: row;
-    justify-content: space-between;
     gap: 1em;
   }
 
